# CGRA350

./: .gitattributes  CMakeLists.txt  README.md
data/: CLOUD0.rar
resources/shaders/: axis.frag  axis.geom  axis.vert  caverock.frag  grid.frag  grid.geom  lighthouse.frag  lighthouse_CookTorrance.frag  lighthouse_OrenNayar.frag  ocean_phong.frag  ocean_refl.frag  ocean_refr.frag  ocean_wavesim.vert  postprocessing.frag  postprocessing.vert  rain.comp  rain.frag  rain.vert  raindrop.frag  raindrop.geom  raindrop.vert  rocks.frag  seabed.frag  seabed.vert  splash.frag  splash.vert  tree.frag  tree.vert  tree2.frag  tree2.vert  tree_leaf.frag  volumerender.frag  volumerender.vert
resources/textures/rocks/: AssortedRocks.mtl
resources/textures/sky_skybox_1/: bottom.hdr
resources/textures/sky_skybox_2/: bottom.hdr
resources/textures/sunset_skybox_1/: bottom.hdr
resources/textures/sunset_skybox_2/: bottom.hdr
resources/textures/sunset_skybox_3/: bottom.hdr
src/computeinstancing/: Rain.cpp  Rain.hpp
src/graphics/: camera.cpp  camera.h  meshes.cpp  meshes.h  postprocessing.cpp  postprocessing.h  renderers.cpp  renderers.h  shaders.cpp  shaders.h  textures.cpp  window.cpp  window.h
src/main/: app_context.cpp  app_context.h  cgra350final.cpp  cgra350final.h  constants.h
src/ui/: ui.cpp  ui.h
src/utils/: image_io.cpp
src/volumerendering/: GUI.hpp  NNWeight.cu  NNWeight.cuh  camera.cu  camera.hpp  radiancePredict.cu  render.cu  render.cuh  vector.cu  vector.cuh  volume.cu  volume.hpp  volume_gui.cpp  volume_gui.hpp
